# projeto_final_esi

./: .gitignore
data/: pyproject.toml
data/src/data/: analysis.py  steam_scraping.py
data/src/data/datasets/: steam_games_dataset.csv  steam_games_dataset_tratado.csv
model/: pyproject.toml
model/src/: pipeline.py
service/: README.md  pyproject.toml  run.py  service_client.py
service/src/steam/: __init__.py  app.py  service.py
service/tests/: test_app.py
