[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Sousa Barbosa",email = "108591857+rodrigosousa13@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)"
]

[tool.poetry]
packages = [{include = "model", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
